# codex

./: .bazelrc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  MODULE.bazel  NOTICE  PNPM.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  cliff-release.toml  cliff.toml  defs.bzl  justfile  package.json  pnpm-lock.yaml  rbe.bzl
bazel/modules/: wine.MODULE.bazel
codex-rs/account/: BUILD.bazel  Cargo.toml
codex-rs/account/src/: lib.rs
codex-rs/agent-identity/: Cargo.toml
codex-rs/agent-identity/src/: lib.rs
codex-rs/app-server-transport/: Cargo.toml
codex-rs/app-server-transport/src/: lib.rs
codex-rs/bwrap/: BUILD.bazel
codex-rs/code-mode-host/: Cargo.toml
codex-rs/code-mode-host/src/: delegate.rs  host_tests.rs  lib.rs  main.rs  peer.rs  peer_tests.rs
codex-rs/code-mode-host/tests/: stdio.rs
codex-rs/connectors/: Cargo.toml
codex-rs/connectors/src/: accessible.rs  app_info.rs  app_tool_policy.rs  app_tool_policy_tests.rs  directory_cache.rs  filter.rs  lib.rs  merge.rs  metadata.rs  plugin_config.rs  plugin_config_tests.rs  snapshot.rs  snapshot_tests.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt_5_1_prompt.md  gpt_5_2_prompt.md  prompt_with_apply_patch_instructions.md
codex-rs/core/src/: account.rs  agent_communication.rs  agent_identity.rs  agents_md.rs  agents_md_manager.rs  agents_md_tests.rs  apply_patch.rs  apply_patch_tests.rs  arc_monitor.rs  arc_monitor_tests.rs  auth.rs  auth_env_telemetry.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  codex.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_tests.rs  codex_tests_guardian.rs  codex_thread.rs  compact.rs  compact_remote.rs  compact_remote_v2.rs  compact_tests.rs  compact_token_budget.rs  config.rs  connectors.rs  connectors_tests.rs  current_time.rs  environment_selection.rs  error.rs  error_tests.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_env.rs  exec_env_tests.rs  exec_policy.rs  (+80 more)
codex-rs/core/tests/: all.rs  responses_headers.rs
codex-rs/device-key/: Cargo.toml
codex-rs/device-key/src/: lib.rs  platform.rs
codex-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/exec-server/src/: client.rs  client_api.rs  client_recovery.rs  client_recovery_tests.rs  client_transport.rs  client_transport_tests.rs  connection.rs  environment.rs  environment_provider.rs  environment_registry.rs  environment_registry_tests.rs  environment_toml.rs  file_read.rs  file_system.rs  fs_helper.rs  fs_sandbox.rs  lib.rs  local_file_system.rs  local_process.rs  noise_channel.rs  noise_channel_tests.rs  process.rs  process_sandbox.rs  process_sandbox_tests.rs  protocol.rs  regular_file.rs  relay.rs  relay_noise_tests.rs  relay_proto.rs  remote.rs  remote_file_stream.rs  remote_file_system.rs  remote_file_system_path_uri_tests.rs  remote_process.rs  resolved_capability.rs  rpc.rs  sandboxed_file_system.rs  server.rs  telemetry.rs  trace_context.rs  (+3 more)
codex-rs/exec-server/testing/: BUILD.bazel  wine_exec_server.rs  wine_remote_test_runner.rs
codex-rs/exec-server/tests/: chatgpt_cloudflare_affinity.rs  exec_process.rs  file_stream.rs  file_system.rs  file_system_unix.rs  file_system_windows.rs  http_client.rs  http_request.rs  initialize.rs  process.rs  relay.rs  selected_capability_roots.rs  websocket.rs
codex-rs/ext/git-attribution/: BUILD.bazel  Cargo.toml
codex-rs/ext/image-generation/: BUILD.bazel  Cargo.toml
codex-rs/hooks/: BUILD.bazel
codex-rs/hooks/src/: lib.rs  registry.rs  schema.rs
codex-rs/integration-test/: Cargo.toml  README.md
codex-rs/integration-test/src/: concurrent_run_test.rs  config_isolation_test.rs  conversation_manager_test.rs  lib.rs  main.rs  sandbox_protection_test.rs
codex-rs/memories/write/: BUILD.bazel  Cargo.toml
codex-rs/model-provider/: Cargo.toml
codex-rs/model-provider/src/: auth.rs  bearer_auth_provider.rs  lib.rs  models_endpoint.rs  provider.rs
codex-rs/modes/: Cargo.toml
codex-rs/modes/src/: lib.rs
codex-rs/realtime-webrtc/: BUILD.bazel
codex-rs/realtime-webrtc/src/: lib.rs
codex-rs/skills/: BUILD.bazel
codex-rs/skills/src/: lib.rs
codex-rs/tool-api/: BUILD.bazel  Cargo.toml  README.md
codex-rs/tool-api/src/: bundle.rs  call.rs  error.rs  lib.rs  output.rs  spec.rs
codex-rs/tools/: Cargo.toml  README.md
codex-rs/tools/src/: agent_job_tool.rs  agent_job_tool_tests.rs  agent_tool.rs  agent_tool_tests.rs  apply_patch_tool.rs  apply_patch_tool_tests.rs  code_mode.rs  code_mode_tests.rs  dynamic_tool.rs  dynamic_tool_tests.rs  function_call_error.rs  image_detail.rs  image_detail_tests.rs  js_repl_tool.rs  js_repl_tool_tests.rs  json_schema_tests.rs  lib.rs  local_tool.rs  local_tool_tests.rs  mcp_resource_tool.rs  mcp_resource_tool_tests.rs  mcp_tool.rs  mcp_tool_tests.rs  parsed_tool_definition.rs  plan_tool.rs  request_plugin_install.rs  request_plugin_install_tests.rs  request_user_input_tool.rs  request_user_input_tool_tests.rs  response_history.rs  responses_api.rs  responses_api_tests.rs  tool_call.rs  tool_config.rs  tool_config_tests.rs  tool_definition_tests.rs  tool_discovery.rs  tool_name.rs  (+14 more)
codex-rs/tui/: BUILD.bazel  Cargo.toml  tooltips.txt
codex-rs/v8-poc/: BUILD.bazel
codex-rs/websocket-sse-test/: Cargo.toml  README.md  package.json  test-runner.js
patches/: BUILD.bazel  aws-lc-sys_windows_msvc_prebuilt_nasm.patch  llvm_windows_arm64_powl.patch  llvm_windows_mingw_compat.patch  rules_rs_delete_git_worktree_pointer.patch  rules_rs_windows_exec_linker.patch  rules_rs_windows_gnullvm_exec.patch  rules_rust_repository_set_exec_constraints.patch  rules_rust_windows_bootstrap_process_wrapper_linker.patch  rules_rust_windows_exec_msvc_build_script_env.patch  rules_rust_windows_exec_std.patch  rules_rust_windows_gnullvm_build_script.patch  rules_rust_windows_msvc_direct_link_args.patch  v8_bazel_rules.patch  v8_module_deps.patch
tools/argument-comment-lint/: BUILD.bazel  README.md  lint_aspect.bzl  list-bazel-targets.sh  run-prebuilt-linter.sh  run.sh  test_wrapper_common.py  wrapper_common.py
(+2278 files in other folders)
