exports_files([
    "abseil_windows_gnullvm_thread_identity.patch",
    "aws-lc-sys_memcmp_check.patch",
    "aws-lc-sys_windows_msvc_prebuilt_nasm.patch",
    "aws-lc-sys_windows_msvc_memcmp_probe.patch",
    "llvm_windows_symlink_extract.patch",
    "rules_rust_windows_bootstrap_process_wrapper_linker.patch",
    "rules_rust_windows_exec_bin_target.patch",
    "rules_rust_windows_exec_std.patch",
    "rules_rust_repository_set_exec_constraints.patch",
    "rules_rust_windows_msvc_direct_link_args.patch",
    "rules_rust_windows_gnullvm_build_script.patch",
    "rules_rs_windows_gnullvm_exec.patch",
    "rusty_v8_prebuilt_out_dir.patch",
    "v8_bazel_rules.patch",
    "v8_module_deps.patch",
    "v8_source_portability.patch",
    "windows-link.patch",
])
