http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Pin a new-WoW64 build so tests need neither system Wine nor 32-bit host
# libraries.
http_archive(
    name = "wine_linux_x86_64",
    build_file = "//third_party/wine:BUILD.bazel",
    sha256 = "39574efa1132c3ca0d5c77dd2eddbe4a49cca0d6cc2c290ff4924493a1c40314",
    strip_prefix = "wine-11.0-amd64-wow64",
    urls = [
        "https://github.com/Kron4ek/Wine-Builds/releases/download/11.0/wine-11.0-amd64-wow64.tar.xz",
    ],
)

# Pin the self-contained Windows distribution so Wine tests need neither a
# system PowerShell installation nor a separate .NET runtime. This intentionally
# stays on 7.2.24 for the test fixture: 7.4.16 and 7.6.2 currently fail during
# CLR startup under the pinned Wine 11 runtime, while 7.2.24 runs successfully.
http_archive(
    name = "powershell_windows_x86_64",
    build_file = "//third_party/powershell:BUILD.bazel",
    sha256 = "a1ccb6d8ad52f917470a136c3752af4465f261bcbe570cf44f52aa69ae6e867e",
    urls = [
        "https://github.com/PowerShell/PowerShell/releases/download/v7.2.24/PowerShell-7.2.24-win-x64.zip",
    ],
)
