load("//:defs.bzl", "codex_rust_crate")

SCHEMA_FIXTURES = glob(
    ["schema/generated/*.json"],
    allow_empty = False,
)

codex_rust_crate(
    name = "hooks",
    compile_data = SCHEMA_FIXTURES,
    crate_name = "codex_hooks",
    integration_compile_data_extra = SCHEMA_FIXTURES,
    test_data_extra = SCHEMA_FIXTURES,
)
