[package]
edition = "2024"
name = "codex-modes"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = "2.10.0"
regex = "1.11.1"
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
