load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "realtime-webrtc",
    crate_name = "codex_realtime_webrtc",
    crate_root = "src/lib.rs",
    srcs = ["src/lib.rs"],
    edition = "2024",
    rustc_flags = ["--cfg=codex_bazel"],
    deps = ["@crates//:thiserror"],
    visibility = ["//visibility:public"],
)
