load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "skills",
    compile_data = glob(
        include = ["**"],
        allow_empty = True,
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
    ),
    crate_name = "codex_skills",
)
