[package]
edition.workspace = true
license.workspace = true
name = "codex-tool-api"
version.workspace = true

[lib]
name = "codex_tool_api"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
