load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "v8-poc",
    crate_features = select({
        "@rules_rs//rs/experimental/platforms/constraints:windows_msvc": [],
        "//conditions:default": ["sandbox"],
    }),
    crate_name = "codex_v8_poc",
    deps_extra = ["@crates//:v8"],
)

alias(
    name = "v8-poc-rusty-v8",
    actual = ":v8-poc",
)
