[package]
edition.workspace = true
license.workspace = true
name = "codex-git-attribution"
version.workspace = true

[lib]
name = "codex_git_attribution"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-core = { workspace = true }
codex-extension-api = { workspace = true }
codex-features = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
